@@ -23,6 +23,7 @@ set(lua_test_maps
   "bugs/805_hero_set_invincible"
   "bugs/807_cannot_traverse_own_ground"
   "bugs/808_get_entities_in_rectangle_duplicates"
+  "bugs/817_entity_set_enabled_overlapping_hero"
   "bugs/818_sprite_get_num_frames"
 )
 
